# pytest-selenium-ui-test

./: .env  .gitignore  conftest.py  pyproject.toml  pytest.ini
cases/: test_baidu_homepage.py  test_demo.py
pages/: base_page.py
